Examples/test-suite/errors/swig_constant_missing_semi.i
%module xxx
%constant int BAR=0
int foo(int);
